--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <!-- Landing -->
   <section id="landing">
     <video style="margin-top: -100px" autoplay name="media" loop>
-      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-        type="video/mp4">
+      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+        type="video/mp4"> -->
     </video>
   </section>
   <!-- /landing -->
@@ -94,8 +94,8 @@
   <!-- Skills -->
   <section id="skills">
     <video autoplay name="media" loop>
-      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-           type="video/mp4">
+      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+        type="video/mp4"> -->
     </video>
     <div class="container">
       <div class="row">
@@ -151,14 +151,14 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/electron1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>Electron</small>
-                  <br>
-                  <small>1 yr | current</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/electron1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Electron</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/firebase1.svg">
               <span class="tooltip">
@@ -300,14 +300,14 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/mysql1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>MySQL</small>
-                  <br>
-                  <small>1 yr | current</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/mysql1.svg">
+              <span class="tooltip">
+                <br>
+                <small>MySQL</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/r1.svg">
               <span class="tooltip">
@@ -350,23 +350,23 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/bootstrap1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>Bootstrap</small>
-                  <br>
-                  <small>4 yr | current (v4)</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/bootstrap1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Bootstrap</small>
+                <br>
+                <small>4 yr | current (v4)</small>
+              </span>
+            </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/css1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>CSS</small>
-                  <br>
-                  <small>5 yr | current (v3)</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/css1.svg">
+              <span class="tooltip">
+                <br>
+                <small>CSS</small>
+                <br>
+                <small>5 yr | current (v3)</small>
+              </span>
+            </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/firebase1.svg">
               <span class="tooltip">
@@ -377,14 +377,14 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/html1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>HTML</small>
-                  <br>
-                  <small>5 yr | current (v5)</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/html1.svg">
+              <span class="tooltip">
+                <br>
+                <small>HTML</small>
+                <br>
+                <small>5 yr | current (v5)</small>
+              </span>
+            </a>
             <a class="random">
               <img class="icon" src='assets/img/icons/js1.svg'>
               <span class="tooltip">
@@ -404,32 +404,32 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/less1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>LESS</small>
-                  <br>
-                  <small>4 yr | current</small>
-                </span>
-              </a>
-              <a class="random">
-                  <img class="icon" src="assets/img/icons/ruby1.svg">
-                  <span class="tooltip">
-                    <br>
-                    <small>Ruby</small>
-                    <br>
-                    <small>2 yr | 2016</small>
-                  </span>
-                </a>
-                <a class="random">
-                    <img class="icon" src="assets/img/icons/sass1.svg">
-                    <span class="tooltip">
-                      <br>
-                      <small>SASS</small>
-                      <br>
-                      <small>4 yr | current</small>
-                    </span>
-                  </a>
+              <img class="icon" src="assets/img/icons/less1.svg">
+              <span class="tooltip">
+                <br>
+                <small>LESS</small>
+                <br>
+                <small>4 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/ruby1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Ruby</small>
+                <br>
+                <small>2 yr | 2016</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/sass1.svg">
+              <span class="tooltip">
+                <br>
+                <small>SASS</small>
+                <br>
+                <small>4 yr | current</small>
+              </span>
+            </a>
           </span>
           <!-- /#fe -->
 
@@ -482,10 +482,19 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/drive1.svg">
+              <img class="icon" src="assets/img/icons/drive1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Google Drive</small>
+                <br>
+                <small>5 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+                <img class="icon" src="assets/img/icons/heroku1.svg">
                 <span class="tooltip">
                   <br>
-                  <small>Google Drive</small>
+                  <small>Heroku</small>
                   <br>
                   <small>5 yr | current</small>
                 </span>
@@ -536,23 +545,23 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/slack1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>Slack</small>
-                  <br>
-                  <small>1 yr | current</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/slack1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Slack</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/txt1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>Txt</small>
-                  <br>
-                  <small>5 yr | current</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/txt1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Txt</small>
+                <br>
+                <small>5 yr | current</small>
+              </span>
+            </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/vscode1.svg">
               <span class="tooltip">
@@ -597,12 +606,52 @@
   <footer id="contact">
     <div class="container">
       <div class="row">
-
+        <h1>Contact</h1>
         <div class="col-6">
-          <h1>Contact</h1>
+          <h2 style="color: white">
+            Got some work?
+            <br> &emsp; Need some help?
+            <br> Can't figure out what the hell's going on in the Middle East?
+            <br> &emsp; Just want to chat?
+            <br> Hit me up!
+          </h2>
         </div>
         <!-- /.col-6 -->
 
+        <div class="col-5">
+          <ul class="social">
+            <!-- hackerrank -->
+            <li>
+              <a href="https://www.hackerrank.com/OkayItsOfficial" target="_blank">
+                <img class="link" src="assets/img/icons/hackerrank1.svg">
+              </a>
+            </li>
+            <!-- github -->
+            <li>
+              <a href="https://github.com/ItsOkayItsOfficial" target="_blank">
+                <img class="link" src="assets/img/icons/github1.svg">
+              </a>
+            </li>
+            <!-- linkedin -->
+            <li>
+              <a href="https://www.linkedin.com/in/alexander-pugh/" target="_blank">
+                <img class="link" src="assets/img/icons/linkedin1.svg">
+              </a>
+            </li>
+            <!-- twitter -->
+            <li>
+              <a href="https://twitter.com/okayitsofficial" target="_blank">
+                <img class="link" src="assets/img/icons/twitter1.svg">
+              </a>
+            </li>
+            <!-- email -->
+            <li>
+              <a href="mailto:alexp@itsokayitsofficial.io">
+                <img class="link" src="assets/img/icons/mail1.svg">
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <!-- /.row -->
     </div>
