temp portfolio added

--- a/index.html
+++ b/index.html
@@ -588,11 +588,42 @@
   <section id="portfolio">
     <div class="container">
       <div class="row">
+          <h1>More Coming...Tomorrow</h1>
+            <!-- Kansas Society -->
+            <div class="col-4">
+              <div class="effect">
+                <a href="port/kss/index.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/ks2.svg" alt=""></a>
+                <figcaption>
+                  <div>
+                    <p>The Kansas Society</p>
+                  </div>
+                </figcaption>
+              </div>
+            </div>
 
-        <div class="col-6">
-          <h1>Portfolio</h1>
-        </div>
-        <!-- /.col-6 -->
+            <!-- K2 Group -->
+            <div class="col-4">
+              <div class="effect">
+                <a href="port/k2/k2.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/k2.svg" alt=""></a>
+                <figcaption>
+                  <div>
+                    <p>K2 Leadership Group</p>
+                  </div>
+                </figcaption>
+              </div>
+            </div>
+
+            <!-- Franklin Partnership -->
+            <div class="col-4">
+              <div class="effect">
+                  <a href="port/fp/index_fp.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/fp.png" alt=""></a>
+                  <figcaption>
+                    <div>
+                      <p>The Franklin Partnership</p>
+                    </div>
+                  </figcaption>
+              </div>
+            </div>
 
       </div>
       <!-- /.row -->
