--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>From Javascript to Liquid to Ruby, designing and building for the web has become an all consuming passion. I'm
+            <p>From Javascript to  to Ruby, designing and building for the web has become an all consuming passion. I'm
               particularly good at building web presence through front-end design, connecting workflows with Node, Angular,
-              & React, and building RESTful API.</p>
-            <p>Need a web presence? I got you covered. Need solid back-to-front management and flow? I'm on it. </p>
+              & React, and manipulating RESTful API.</p>
+            <p>Need a web presence? I got you covered. Need solid back-to-front management and flow? I'm on it! </p>
             <br>
             <hr>
           </div>
