Added new portfolio item, updated styling and footer

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <!-- Landing -->
   <section id="landing">
     <video style="margin-top: -100px" autoplay name="media" loop>
-      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-        type="video/mp4">
+      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+        type="video/mp4"> -->
     </video>
   </section>
   <!-- /landing -->
@@ -73,9 +73,9 @@
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>From Javascript to  to Ruby, designing and building for the web has become an all consuming passion. I'm
-              particularly good at building web presence through front-end design, connecting workflows with Node, Angular,
-              & React, and manipulating RESTful API.</p>
+            <p>From Javascript to to Ruby, designing and building for the web has become an all consuming passion. I'm particularly
+              good at building web presence through front-end design, connecting workflows with Node, Angular, & React, and
+              manipulating RESTful API.</p>
             <p>Need a web presence? I got you covered. Need solid back-to-front management and flow? I'm on it! </p>
             <br>
             <hr>
@@ -94,8 +94,8 @@
   <!-- Skills -->
   <section id="skills">
     <video autoplay name="media" loop>
-      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-        type="video/mp4">
+      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+        type="video/mp4"> -->
     </video>
     <div class="container">
       <div class="row">
@@ -491,14 +491,14 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/heroku1.svg">
-                <span class="tooltip">
-                  <br>
-                  <small>Heroku</small>
-                  <br>
-                  <small>5 yr | current</small>
-                </span>
-              </a>
+              <img class="icon" src="assets/img/icons/heroku1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Heroku</small>
+                <br>
+                <small>5 yr | current</small>
+              </span>
+            </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/markdown1.svg">
               <span class="tooltip">
@@ -587,46 +587,68 @@
   <!-- Portfolio -->
   <section id="portfolio">
     <div class="container">
-      <div class="row">
-          <h1>More Coming...Tomorrow</h1>
-            <!-- Kansas Society -->
-            <div class="col-4">
-              <div class="effect">
-                <a href="port/kss/index.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/ks2.svg" alt=""></a>
-                <figcaption>
-                  <div>
-                    <p>The Kansas Society</p>
-                  </div>
-                </figcaption>
-              </div>
-            </div>
+      <div class="row" height="50%">
+        <h1>More Coming...Tomorrow</h1>
 
-            <!-- K2 Group -->
-            <div class="col-4">
-              <div class="effect">
-                <a href="port/k2/k2.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/k2.svg" alt=""></a>
-                <figcaption>
-                  <div>
-                    <p>K2 Leadership Group</p>
-                  </div>
-                </figcaption>
+        <!-- Kansas Society -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="port/kss/index.html" target="_blank">
+              <img class="img-responsive" src="assets/img/orgs/ks2.svg" alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>The Kansas Society</p>
               </div>
-            </div>
+            </figcaption>
+          </div>
+        </div>
 
-            <!-- Franklin Partnership -->
-            <div class="col-4">
-              <div class="effect">
-                  <a href="port/fp/index_fp.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/fp.png" alt=""></a>
-                  <figcaption>
-                    <div>
-                      <p>The Franklin Partnership</p>
-                    </div>
-                  </figcaption>
+        <!-- K2 Group -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="port/k2/k2.html" target="_blank">
+              <img class="img-responsive" src="assets/img/orgs/k2.svg" alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>K2 Leadership Group</p>
               </div>
-            </div>
+            </figcaption>
+          </div>
+        </div>
 
+        <!-- Franklin Partnership -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="port/fp/index_fp.html" target="_blank">
+              <img class="img-responsive" src="assets/img/orgs/fp.png" alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>The Franklin Partnership</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- Bamazon -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://github.com/ItsOkayItsOfficial/bamazon" target="_blank">
+              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/ItsOkayItsOfficial/bamazon/master/bamazon_logo.jpg"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>CLI app using MySQL</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
       </div>
       <!-- /.row -->
+
     </div>
     <!-- /.container -->
   </section>
@@ -637,7 +659,7 @@
   <footer id="contact">
     <div class="container">
       <div class="row">
-        <h1>Contact</h1>
+        <br>
         <div class="col-6">
           <h2 style="color: white">
             Got some work?
@@ -651,12 +673,6 @@
 
         <div class="col-5">
           <ul class="social">
-            <!-- hackerrank -->
-            <li>
-              <a href="https://www.hackerrank.com/OkayItsOfficial" target="_blank">
-                <img class="link" src="assets/img/icons/hackerrank1.svg">
-              </a>
-            </li>
             <!-- github -->
             <li>
               <a href="https://github.com/ItsOkayItsOfficial" target="_blank">
