Changed <h1> placement on #portfolio

--- a/index.html
+++ b/index.html
@@ -587,8 +587,7 @@
   <!-- Portfolio -->
   <section id="portfolio">
     <div class="container">
-      <div class="row" height="50%">
-        <h1>More Coming...Tomorrow</h1>
+      <div class="row">
 
         <!-- Kansas Society -->
         <div class="col-4">
@@ -646,9 +645,9 @@
             </figcaption>
           </div>
         </div>
+        <h1>More Coming...Tomorrow</h1>
       </div>
       <!-- /.row -->
-
     </div>
     <!-- /.container -->
   </section>
