--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="descption" content="">
+  <meta name="descption" content="Alex P | Web Developer">
   <meta name="author" content="ItsOkayItsOfficial">
   <link rel="shortcut icon" href="assets/img/logo.png">
 
