Again with the meta tags

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="descption" content="Alex P | Web Developer">
-  <meta name="author" content="ItsOkayItsOfficial">
+  <meta name="descption" content="ItsOkayItsOfficial! The Official portfolio of Alex P, full-stack web developer and know human.">
+  <meta name="author" content="Alex P">
   <link rel="shortcut icon" href="assets/img/logo.png">
 
   <title>Alex P | Web Developer</title>
