--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
   <section id="portfolio">
     <div class="container">
       <div class="row">
-<br>
+        <br>
         <!-- Kansas Society -->
         <div class="col-4">
           <div class="effect">
@@ -648,49 +648,53 @@
 
 
   <!-- Contact -->
-  <footer id="contact">
+  <footer>
     <div class="container">
       <div class="row">
-        <br>
-        <div class="col-6">
-          <h2 style="color: white">
-            Got some work?
-            <br> &emsp; Need some help?
-            <br> Can't figure out what the hell's going on in the Middle East?
-            <br> &emsp; Just want to chat?
-            <br> Hit me up!
-          </h2>
-        </div>
-        <!-- /.col-6 -->
+        <div id="contact">
+        <h1 style="text-align: center; margin-left: -100px;">Contact</h1>
 
-        <div class="col-5">
-          <ul class="social">
-            <!-- github -->
-            <li>
-              <a href="https://github.com/ItsOkayItsOfficial" target="_blank">
-                <img class="link" src="assets/img/icons/github1.svg">
-              </a>
-            </li>
-            <!-- linkedin -->
-            <li>
-              <a href="https://www.linkedin.com/in/alexander-pugh/" target="_blank">
-                <img class="link" src="assets/img/icons/linkedin1.svg">
-              </a>
-            </li>
-            <!-- twitter -->
-            <li>
-              <a href="https://twitter.com/okayitsofficial" target="_blank">
-                <img class="link" src="assets/img/icons/twitter1.svg">
-              </a>
-            </li>
-            <!-- email -->
-            <li>
-              <a href="mailto:alexp@itsokayitsofficial.io">
-                <img class="link" src="assets/img/icons/mail1.svg">
-              </a>
-            </li>
-          </ul>
+          <div class="col-6">
+            <h2>
+              Got some work?
+              <br> &emsp; Need some help?
+              <br> Can't figure out what's going on in the Middle East?
+              <br> &emsp; Just want to chat?
+              <br> Hit me up!
+            </h2>
+          </div>
+          <!-- /.col-6 -->
+
+          <div class="col-6">
+            <ul class="social">
+              <!-- github -->
+              <li>
+                <a href="https://github.com/ItsOkayItsOfficial" target="_blank">
+                  <img class="link" src="assets/img/icons/github1.svg">
+                </a>
+              </li>
+              <!-- linkedin -->
+              <li>
+                <a href="https://www.linkedin.com/in/alexander-pugh/" target="_blank">
+                  <img class="link" src="assets/img/icons/linkedin1.svg">
+                </a>
+              </li>
+              <!-- twitter -->
+              <li>
+                <a href="https://twitter.com/okayitsofficial" target="_blank">
+                  <img class="link" src="assets/img/icons/twitter1.svg">
+                </a>
+              </li>
+              <!-- email -->
+              <li>
+                <a href="mailto:alexp@itsokayitsofficial.io">
+                  <img class="link" src="assets/img/icons/mail1.svg">
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
+        <!-- /#contact -->
       </div>
       <!-- /.row -->
     </div>
