Updated #portfolio w/ Whiteboard

--- a/index.html
+++ b/index.html
@@ -639,6 +639,21 @@
             </figcaption>
           </div>
         </div>
+
+        <!-- Whiteboard -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://peaceful-garden-23465.herokuapp.com/" target="_blank">
+              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/ItsOkayItsOfficial/Project2/develop/public/images/logo.png"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>Whiteboard Dynamic Syllabus App</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
       </div>
       <!-- /.row -->
     </div>
@@ -652,7 +667,7 @@
     <div class="container">
       <div class="row">
         <div id="contact">
-        <h1 style="text-align: center; margin-left: -100px;">Contact</h1>
+          <h1 style="text-align: center; margin-left: -100px;">Contact</h1>
 
           <div class="col-6">
             <h2>
