--- a/index.html
+++ b/index.html
@@ -625,21 +625,6 @@
           </div>
         </div>
 
-        <!-- Bamazon -->
-        <div class="col-4">
-          <div class="effect">
-            <a href="https://github.com/ItsOkayItsOfficial/bamazon" target="_blank">
-              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/ItsOkayItsOfficial/bamazon/master/bamazon_logo.jpg"
-                alt="">
-            </a>
-            <figcaption>
-              <div>
-                <p>CLI app using MySQL</p>
-              </div>
-            </figcaption>
-          </div>
-        </div>
-
         <!-- Whiteboard -->
         <div class="col-4">
           <div class="effect">
@@ -650,6 +635,38 @@
             <figcaption>
               <div>
                 <p>Whiteboard Dynamic Syllabus App</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- Bamazon -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://github.com/ItsOkayItsOfficial/bamazon" target="_blank">
+              <br>
+              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/ItsOkayItsOfficial/bamazon/master/bamazon_logo.jpg"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>MySQL CLI App</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- CodeX -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://github.com/ItsOkayItsOfficial/Project1" target="_blank">
+              <br>
+              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/Team-Fire-Codex/Codex/master/images/text_logo_1.png"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>CodeX Learning Resource</p>
               </div>
             </figcaption>
           </div>
