--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
         <!-- CodeX -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://github.com/ItsOkayItsOfficial/Project1" target="_blank">
+            <a href="https://wcrozier12.github.io/CODEx/" target="_blank">
               <br>
               <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/Team-Fire-Codex/Codex/master/images/text_logo_1.png"
                 alt="">
