More stopwatch bullshittery

--- a/port/angularjs_stopwatch/index.html
+++ b/port/angularjs_stopwatch/index.html
@@ -46,7 +46,7 @@
   <section id="stopwatch">
     <div class="row">
 
-      <div ng-app="stopWatchApp" ng-controller="stopWatchDemoCtrl">
+      <div ng-app="app" ng-controller="stopWatchDemoCtrl">
 
         <div ng-repeat="options in stopwatches">
           <div bb-stopwatch options="options">
