Again with the stopwatch

--- a/port/angularjs_stopwatch/index.html
+++ b/port/angularjs_stopwatch/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body ng-app="app">
 
   <!-- Sitnav -->
   <nav id="site-nav" class="navbar nav-top">
@@ -46,7 +46,7 @@
   <section id="stopwatch">
     <div class="row">
 
-      <div ng-app="app" ng-controller="stopWatchDemoCtrl">
+      <div ng-controller="stopWatchDemoCtrl">
 
         <div ng-repeat="options in stopwatches">
           <div bb-stopwatch options="options">
