Again with the stopwatch

--- a/port/angularjs_stopwatch/index.html
+++ b/port/angularjs_stopwatch/index.html
@@ -11,6 +11,10 @@
 
   <title>Alex P | AngularJS Stopwatch</title>
 
+    <!-- Angular Js 1x -->
+    <script src="//code.angularjs.org/1.2.3/angular.js"></script>
+    <script src="app.js"></script>
+
   <!-- Custom CSS -->
   <link href="../../assets/css/style.css" rel="stylesheet">
 
@@ -73,10 +77,6 @@
 
   <!-- Custom Js -->
   <script src="../../assets/js/custom.js"></script>
-
-  <!-- Angular Js 1x -->
-  <script src="https://code.angularjs.org/1.2.3/angular.js"></script>
-  <script src="app.js"></script>
 
 </body>
 
