Added Angular stopwatch to #portfolio

--- a/index.html
+++ b/index.html
@@ -625,6 +625,22 @@
           </div>
         </div>
 
+        <!-- Angular Stopwatch -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://peaceful-garden-23465.herokuapp.com/" target="_blank">
+              <img class="img-responsive" width="200px" src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>Stopwatch in Angular & Bootstrap</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+
         <!-- Whiteboard -->
         <div class="col-4">
           <div class="effect">
