--- a/port/angularjs_stopwatch/index.html
+++ b/port/angularjs_stopwatch/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="descption" content="ItsOkayItsOfficial! The Official portfolio of Alex P, full-stack web developer and know human.">
   <meta name="author" content="Alex P">
-  <link rel="shortcut icon" href="assets/img/logo.png">
+  <link rel="shortcut icon" href="../../assets/img/logo.png">
 
   <title>Alex P | AngularJS Stopwatch</title>
 
@@ -24,24 +24,12 @@
 
   <!-- Sitnav -->
   <nav id="site-nav" class="navbar nav-top">
-    <a class="nav-link" href="#about">
-      <h1>About</h1>
-    </a>
-    <a class="nav-link" href="#skills">
-      <h1>Skills</h1>
-    </a>
-    <a class="nav-logo" href="#landing">
+    <a class="nav-logo" href="http://itsokayitsofficial.io">
       <svg class="nav-logo-bg nav-logo-sm" viewBox="0 0 250 250">
         <circle id="loader" cx="125" cy="125" r="121" style="opacity: 0;"></circle>
         <polygon id="check" points="218.92 85.12 190.64 56.84 103.28 144.2 55.82 96.73 27.53 125.02 75.01 172.5 75.03 172.48 103.3 200.75 218.92 85.12"
         />
       </svg>
-    </a>
-    <a class="nav-link" href="#portfolio">
-      <h1>Portfolio</h1>
-    </a>
-    <a class="nav-link" href="#contact">
-      <h1>Contact</h1>
     </a>
   </nav>
   <!--/sitnav -->
