Added more styling to #portfolio

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
   <!-- Portfolio -->
   <section id="portfolio">
     <div class="container">
-      <div class="row">
+      <div class="row half">
         <br>
         <!-- Kansas Society -->
         <div class="col-4">
@@ -625,11 +625,15 @@
           </div>
         </div>
 
+        </div>
+        <!-- /.row -->
+
+        <div class="row half">
         <!-- Angular Stopwatch -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://peaceful-garden-23465.herokuapp.com/" target="_blank">
-              <img class="img-responsive" width="200px" src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg"
+            <a href="http://itsokayitsofficial.io/" target="_blank">
+              <img class="img-responsive" src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg"
                 alt="">
             </a>
             <figcaption>
@@ -672,6 +676,10 @@
           </div>
         </div>
 
+        </div>
+        <!-- /.row -->
+
+        <div class="row half">
         <!-- Bamazon -->
         <div class="col-4">
           <div class="effect">
