Added porthub to #portfolio

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
             </a>
             <figcaption>
               <div>
-                <p>The Kansas Society</p>
+                <p>Org branding & CRM (NationBuilder)</p>
               </div>
             </figcaption>
           </div>
@@ -605,7 +605,7 @@
             </a>
             <figcaption>
               <div>
-                <p>K2 Leadership Group</p>
+                <p>Personal branding & site (Bootstrap)</p>
               </div>
             </figcaption>
           </div>
@@ -619,26 +619,25 @@
             </a>
             <figcaption>
               <div>
-                <p>The Franklin Partnership</p>
+                <p>Agency branding & site (Bootstrap)</p>
               </div>
             </figcaption>
           </div>
         </div>
 
-        </div>
-        <!-- /.row -->
+      </div>
+      <!-- /.row -->
 
-        <div class="row half">
+      <div class="row half">
         <!-- Angular Stopwatch -->
         <div class="col-4">
           <div class="effect">
-            <a href="http://itsokayitsofficial.io/" target="_blank">
-              <img class="img-responsive" src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg"
-                alt="">
+            <a href="http://itsokayitsofficial.io/port/angularjs_stopwatch/index.html" target="_blank">
+              <img class="img-responsive" src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg" alt="">
             </a>
             <figcaption>
               <div>
-                <p>Stopwatch in Angular & Bootstrap</p>
+                <p>Stopwatch (Angular 1.x)</p>
               </div>
             </figcaption>
           </div>
@@ -654,7 +653,7 @@
             </a>
             <figcaption>
               <div>
-                <p>Whiteboard Dynamic Syllabus App</p>
+                <p>Dynamic Syllabus (Node.js)</p>
               </div>
             </figcaption>
           </div>
@@ -670,16 +669,16 @@
             </a>
             <figcaption>
               <div>
-                <p>CodeX Learning Resource</p>
+                <p>Learning Resource (REST API)</p>
               </div>
             </figcaption>
           </div>
         </div>
 
-        </div>
-        <!-- /.row -->
+      </div>
+      <!-- /.row -->
 
-        <div class="row half">
+      <div class="row half">
         <!-- Bamazon -->
         <div class="col-4">
           <div class="effect">
@@ -690,7 +689,23 @@
             </a>
             <figcaption>
               <div>
-                <p>MySQL CLI App</p>
+                <p>CLI App (MySQL)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- PortHub -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://itsokayitsofficial.github.io/project3_mockup" target="_blank">
+              <br>
+              <img class="img-responsive" width="200px" src="https://camo.githubusercontent.com/8f12aa75a329d4b8df4ded8a752981f73573f2a7/68747470733a2f2f63646e2e7261776769742e636f6d2f4974734f6b61794974734f6666696369616c2f70726f6a656374332f6465762f6173736574732f696d616765732f706f72746875622d6c6f676f2e7376673f73616e6974697a653d74727565"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>ReactApp Mockup (Bootstrap 4)</p>
               </div>
             </figcaption>
           </div>
@@ -711,18 +726,7 @@
         <div id="contact">
           <h1 style="text-align: center; margin-left: -100px;">Contact</h1>
 
-          <div class="col-6">
-            <h2>
-              Got some work?
-              <br> &emsp; Need some help?
-              <br> Can't figure out what's going on in the Middle East?
-              <br> &emsp; Just want to chat?
-              <br> Hit me up!
-            </h2>
-          </div>
-          <!-- /.col-6 -->
-
-          <div class="col-6">
+          <div class="col-12">
             <ul class="social">
               <!-- github -->
               <li>
